# udpt-project

./: .gitignore  docker-compose.yml  readme.md
documents/: document.md
label-stick-be/service-gateway/: Dockerfile  pyproject.toml
label-stick-be/service-gateway/src/: main.py
label-stick-be/service-gateway/src/GraphQL/: mutation.py  query.py
label-stick-be/service-gateway/src/configs/: base.py
label-stick-be/service-gateway/src/services/assignment/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/docment/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/document/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/label/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/label_sentence/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/project/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/sentence/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/sentence_label/: dto.py  resolver.py
label-stick-be/service-gateway/src/services/user/: dto.py  resolver.py
label-stick-be/service-gateway/src/utils/: common.py  dto.py  rest_api.py  storage.py  validation.py
label-stick-be/service-manager/: Dockerfile  pyproject.toml
label-stick-be/service-manager/src/: main.py
label-stick-be/service-manager/src/configs/: celery.py
label-stick-be/service-manager/src/database/: crud.py  models.py
label-stick-be/service-manager/src/services/assignment/: controller.py  repository.py  schema.py
label-stick-be/service-manager/src/services/document/: controller.py  repository.py  schema.py
label-stick-be/service-manager/src/services/project/: controller.py  repository.py  schema.py
label-stick-be/service-manager/src/services/tasks/: controller.py  repository.py  schema.py
label-stick-be/service-manager/src/utils/: celery_worker.py  mail.py  storage.py
label-stick-be/service-user/: Dockerfile  pyproject.toml
label-stick-be/service-user/alembic/: env.py
label-stick-be/service-user/alembic/versions/: 1_database_init.py  2_name_unique.py  3_sentence_label_unique.py
label-stick-be/service-user/src/: main.py
label-stick-be/service-user/src/configs/: base.py
label-stick-be/service-user/src/database/: crud.py  models.py
label-stick-be/service-user/src/utils/: auth.py
label-stick-be/service-worker/: Dockerfile  pyproject.toml
label-stick-be/service-worker/src/: tasks.py
label-stick-be/service-worker/src/configs/: base.py  celery.py
label-stick-be/service-worker/src/utils/: common.py  mail.py
label-stick-fe/: .env  (+7 more)
(+66 files in other folders)
