[tool.poetry]
name = "label-stick-be"
version = "0.1.0"
description = ""
authors = ["Phạm Tân Tị <kurokid0206@gmail.com>"]
readme = "README.md"
# packages = [{include = "label_stick_be"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
