[tool.poetry]
name = "service-worker"
version = "0.1.0"
description = ""
authors = ["Phạm Tân Tị <kurokid0206@gmail.com>"]
readme = "README.md"
# packages = [{include = "service_worker"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.1"
redis = "^4.6.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
